Adding new team feature + updating app UI

--- a/notebooks/02_baseline_models.ipynb
+++ b/notebooks/02_baseline_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 113,
    "id": "b6d2421d-f3ff-4ea8-99ec-abe31f61499d",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 114,
    "id": "46b2aa19-ecb9-4131-a6e3-9442803fe389",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 115,
    "id": "c1567c1b-74b7-44b1-b848-f37cc4ef0b48",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 116,
    "id": "92f0ec90-25f8-4e29-8fe7-047f015008a4",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 117,
    "id": "2ff50114-929f-4e54-a354-ea0a425a7781",
    "metadata": {
     "scrolled": true
@@ -134,30 +134,31 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 201 entries, 18 to 85\n",
-      "Data columns (total 19 columns):\n",
+      "Data columns (total 20 columns):\n",
       " #   Column                          Non-Null Count  Dtype  \n",
       "---  ------                          --------------  -----  \n",
       " 0   years_of_experience             201 non-null    int64  \n",
-      " 1   games                           201 non-null    int64  \n",
-      " 2   completions_per_game            201 non-null    float64\n",
-      " 3   attempts_per_game               201 non-null    float64\n",
-      " 4   passing_yards_per_game          201 non-null    float64\n",
-      " 5   passing_tds_per_game            201 non-null    float64\n",
-      " 6   passing_interceptions_per_game  201 non-null    float64\n",
-      " 7   sacks_suffered_per_game         201 non-null    float64\n",
-      " 8   sack_fumbles_per_game           201 non-null    float64\n",
-      " 9   passing_first_downs_per_game    201 non-null    float64\n",
-      " 10  passing_epa_per_game            201 non-null    float64\n",
-      " 11  passing_cpoe_per_game           201 non-null    float64\n",
-      " 12  pacr_per_game                   201 non-null    float64\n",
-      " 13  carries_per_game                201 non-null    float64\n",
-      " 14  rushing_yards_per_game          201 non-null    float64\n",
-      " 15  rushing_tds_per_game            201 non-null    float64\n",
-      " 16  rushing_fumbles_per_game        201 non-null    float64\n",
-      " 17  rushing_first_downs_per_game    201 non-null    float64\n",
-      " 18  rushing_epa_per_game            201 non-null    float64\n",
-      "dtypes: float64(17), int64(2)\n",
-      "memory usage: 31.4 KB\n"
+      " 1   new_team_next_year              201 non-null    int64  \n",
+      " 2   games                           201 non-null    int64  \n",
+      " 3   completions_per_game            201 non-null    float64\n",
+      " 4   attempts_per_game               201 non-null    float64\n",
+      " 5   passing_yards_per_game          201 non-null    float64\n",
+      " 6   passing_tds_per_game            201 non-null    float64\n",
+      " 7   passing_interceptions_per_game  201 non-null    float64\n",
+      " 8   sacks_suffered_per_game         201 non-null    float64\n",
+      " 9   sack_fumbles_per_game           201 non-null    float64\n",
+      " 10  passing_first_downs_per_game    201 non-null    float64\n",
+      " 11  passing_epa_per_game            201 non-null    float64\n",
+      " 12  passing_cpoe_per_game           201 non-null    float64\n",
+      " 13  pacr_per_game                   201 non-null    float64\n",
+      " 14  carries_per_game                201 non-null    float64\n",
+      " 15  rushing_yards_per_game          201 non-null    float64\n",
+      " 16  rushing_tds_per_game            201 non-null    float64\n",
+      " 17  rushing_fumbles_per_game        201 non-null    float64\n",
+      " 18  rushing_first_downs_per_game    201 non-null    float64\n",
+      " 19  rushing_epa_per_game            201 non-null    float64\n",
+      "dtypes: float64(17), int64(3)\n",
+      "memory usage: 33.0 KB\n"
      ]
     }
    ],
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 118,
    "id": "ca5330ea-be57-49a6-9e12-1901f9c0ff3e",
    "metadata": {},
    "outputs": [
@@ -193,7 +194,7 @@
       "\n",
       "QB Best Parameters: {'reg': Ridge(max_iter=5000), 'reg__alpha': 80}\n",
       "\n",
-      "QB Best RMSE: 3.719\n",
+      "QB Best RMSE: 3.690\n",
       "\n",
       "QB Best Model: Pipeline(steps=[('scaler', StandardScaler()),\n",
       "                ('reg', Ridge(alpha=80, max_iter=5000))])\n"
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 119,
    "id": "84d7659a-e5d0-4cf2-9dfe-ccd0a5552243",
    "metadata": {
     "scrolled": true
@@ -219,32 +220,33 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 505 entries, 425 to 644\n",
-      "Data columns (total 21 columns):\n",
+      "Data columns (total 22 columns):\n",
       " #   Column                                Non-Null Count  Dtype  \n",
       "---  ------                                --------------  -----  \n",
       " 0   years_of_experience                   505 non-null    int64  \n",
-      " 1   games                                 505 non-null    int64  \n",
-      " 2   carries_per_game                      505 non-null    float64\n",
-      " 3   rushing_yards_per_game                505 non-null    float64\n",
-      " 4   rushing_tds_per_game                  505 non-null    float64\n",
-      " 5   rushing_fumbles_per_game              505 non-null    float64\n",
-      " 6   rushing_first_downs_per_game          505 non-null    float64\n",
-      " 7   rushing_epa_per_game                  505 non-null    float64\n",
-      " 8   receptions_per_game                   505 non-null    float64\n",
-      " 9   targets_per_game                      505 non-null    float64\n",
-      " 10  receiving_yards_per_game              505 non-null    float64\n",
-      " 11  receiving_tds_per_game                505 non-null    float64\n",
-      " 12  receiving_fumbles_per_game            505 non-null    float64\n",
-      " 13  receiving_air_yards_per_game          505 non-null    float64\n",
-      " 14  receiving_yards_after_catch_per_game  505 non-null    float64\n",
-      " 15  receiving_first_downs_per_game        505 non-null    float64\n",
-      " 16  receiving_epa_per_game                505 non-null    float64\n",
-      " 17  racr                                  505 non-null    float64\n",
-      " 18  target_share                          505 non-null    float64\n",
-      " 19  air_yards_share                       505 non-null    float64\n",
-      " 20  wopr                                  505 non-null    float64\n",
-      "dtypes: float64(19), int64(2)\n",
-      "memory usage: 86.8 KB\n"
+      " 1   new_team_next_year                    505 non-null    int64  \n",
+      " 2   games                                 505 non-null    int64  \n",
+      " 3   carries_per_game                      505 non-null    float64\n",
+      " 4   rushing_yards_per_game                505 non-null    float64\n",
+      " 5   rushing_tds_per_game                  505 non-null    float64\n",
+      " 6   rushing_fumbles_per_game              505 non-null    float64\n",
+      " 7   rushing_first_downs_per_game          505 non-null    float64\n",
+      " 8   rushing_epa_per_game                  505 non-null    float64\n",
+      " 9   receptions_per_game                   505 non-null    float64\n",
+      " 10  targets_per_game                      505 non-null    float64\n",
+      " 11  receiving_yards_per_game              505 non-null    float64\n",
+      " 12  receiving_tds_per_game                505 non-null    float64\n",
+      " 13  receiving_fumbles_per_game            505 non-null    float64\n",
+      " 14  receiving_air_yards_per_game          505 non-null    float64\n",
+      " 15  receiving_yards_after_catch_per_game  505 non-null    float64\n",
+      " 16  receiving_first_downs_per_game        505 non-null    float64\n",
+      " 17  receiving_epa_per_game                505 non-null    float64\n",
+      " 18  racr                                  505 non-null    float64\n",
+      " 19  target_share                          505 non-null    float64\n",
+      " 20  air_yards_share                       505 non-null    float64\n",
+      " 21  wopr                                  505 non-null    float64\n",
+      "dtypes: float64(19), int64(3)\n",
+      "memory usage: 90.7 KB\n"
      ]
     }
    ],
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 120,
    "id": "7adc7ce6-16d9-41df-b66a-7f8667a26eef",
    "metadata": {},
    "outputs": [
@@ -278,12 +280,12 @@
      "text": [
       "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n",
       "\n",
-      "RB Best Parameters: {'reg': Lasso(max_iter=5000), 'reg__alpha': 0.1}\n",
+      "RB Best Parameters: {'reg': Ridge(max_iter=5000), 'reg__alpha': 80}\n",
       "\n",
-      "RB Best RMSE: 3.971\n",
+      "RB Best RMSE: 3.963\n",
       "\n",
       "RB Best Model: Pipeline(steps=[('scaler', StandardScaler()),\n",
-      "                ('reg', Lasso(alpha=0.1, max_iter=5000))])\n"
+      "                ('reg', Ridge(alpha=80, max_iter=5000))])\n"
      ]
     }
    ],
@@ -294,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 121,
    "id": "80a178b7-b3e9-4673-b4c3-95f9d29a5069",
    "metadata": {
     "scrolled": true
@@ -306,31 +308,32 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 833 entries, 76 to 617\n",
-      "Data columns (total 20 columns):\n",
+      "Data columns (total 21 columns):\n",
       " #   Column                                Non-Null Count  Dtype  \n",
       "---  ------                                --------------  -----  \n",
       " 0   years_of_experience                   833 non-null    int64  \n",
-      " 1   games                                 833 non-null    int64  \n",
-      " 2   receptions_per_game                   833 non-null    float64\n",
-      " 3   targets_per_game                      833 non-null    float64\n",
-      " 4   receiving_yards_per_game              833 non-null    float64\n",
-      " 5   receiving_tds_per_game                833 non-null    float64\n",
-      " 6   receiving_fumbles_per_game            833 non-null    float64\n",
-      " 7   receiving_air_yards_per_game          833 non-null    float64\n",
-      " 8   receiving_yards_after_catch_per_game  833 non-null    float64\n",
-      " 9   receiving_first_downs_per_game        833 non-null    float64\n",
-      " 10  receiving_epa_per_game                833 non-null    float64\n",
-      " 11  racr                                  833 non-null    float64\n",
-      " 12  target_share                          833 non-null    float64\n",
-      " 13  air_yards_share                       833 non-null    float64\n",
-      " 14  wopr                                  833 non-null    float64\n",
-      " 15  carries_per_game                      833 non-null    float64\n",
-      " 16  rushing_yards_per_game                833 non-null    float64\n",
-      " 17  rushing_tds_per_game                  833 non-null    float64\n",
-      " 18  rushing_fumbles_per_game              833 non-null    float64\n",
-      " 19  rushing_first_downs_per_game          833 non-null    float64\n",
-      "dtypes: float64(18), int64(2)\n",
-      "memory usage: 136.7 KB\n"
+      " 1   new_team_next_year                    833 non-null    int64  \n",
+      " 2   games                                 833 non-null    int64  \n",
+      " 3   receptions_per_game                   833 non-null    float64\n",
+      " 4   targets_per_game                      833 non-null    float64\n",
+      " 5   receiving_yards_per_game              833 non-null    float64\n",
+      " 6   receiving_tds_per_game                833 non-null    float64\n",
+      " 7   receiving_fumbles_per_game            833 non-null    float64\n",
+      " 8   receiving_air_yards_per_game          833 non-null    float64\n",
+      " 9   receiving_yards_after_catch_per_game  833 non-null    float64\n",
+      " 10  receiving_first_downs_per_game        833 non-null    float64\n",
+      " 11  receiving_epa_per_game                833 non-null    float64\n",
+      " 12  racr                                  833 non-null    float64\n",
+      " 13  target_share                          833 non-null    float64\n",
+      " 14  air_yards_share                       833 non-null    float64\n",
+      " 15  wopr                                  833 non-null    float64\n",
+      " 16  carries_per_game                      833 non-null    float64\n",
+      " 17  rushing_yards_per_game                833 non-null    float64\n",
+      " 18  rushing_tds_per_game                  833 non-null    float64\n",
+      " 19  rushing_fumbles_per_game              833 non-null    float64\n",
+      " 20  rushing_first_downs_per_game          833 non-null    float64\n",
+      "dtypes: float64(18), int64(3)\n",
+      "memory usage: 143.2 KB\n"
      ]
     }
    ],
@@ -354,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 122,
    "id": "6cff7b37-1989-4f10-9e38-ab94fa8eff09",
    "metadata": {},
    "outputs": [
@@ -366,7 +369,7 @@
       "\n",
       "WR Best Parameters: {'reg': Ridge(max_iter=5000), 'reg__alpha': 50}\n",
       "\n",
-      "WR Best RMSE: 3.300\n",
+      "WR Best RMSE: 3.291\n",
       "\n",
       "WR Best Model: Pipeline(steps=[('scaler', StandardScaler()),\n",
       "                ('reg', Ridge(alpha=50, max_iter=5000))])\n"
@@ -380,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 123,
    "id": "5e03e4fe-74b2-4765-a28c-c1fea7ca1b9b",
    "metadata": {
     "scrolled": true
@@ -392,26 +395,27 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 424 entries, 287 to 40\n",
-      "Data columns (total 15 columns):\n",
+      "Data columns (total 16 columns):\n",
       " #   Column                                Non-Null Count  Dtype  \n",
       "---  ------                                --------------  -----  \n",
       " 0   years_of_experience                   424 non-null    int64  \n",
-      " 1   games                                 424 non-null    int64  \n",
-      " 2   racr                                  424 non-null    float64\n",
-      " 3   target_share                          424 non-null    float64\n",
-      " 4   air_yards_share                       424 non-null    float64\n",
-      " 5   wopr                                  424 non-null    float64\n",
-      " 6   receptions_per_game                   424 non-null    float64\n",
-      " 7   targets_per_game                      424 non-null    float64\n",
-      " 8   receiving_yards_per_game              424 non-null    float64\n",
-      " 9   receiving_tds_per_game                424 non-null    float64\n",
-      " 10  receiving_fumbles_per_game            424 non-null    float64\n",
-      " 11  receiving_air_yards_per_game          424 non-null    float64\n",
-      " 12  receiving_yards_after_catch_per_game  424 non-null    float64\n",
-      " 13  receiving_first_downs_per_game        424 non-null    float64\n",
-      " 14  receiving_epa_per_game                424 non-null    float64\n",
-      "dtypes: float64(13), int64(2)\n",
-      "memory usage: 53.0 KB\n"
+      " 1   new_team_next_year                    424 non-null    int64  \n",
+      " 2   games                                 424 non-null    int64  \n",
+      " 3   racr                                  424 non-null    float64\n",
+      " 4   target_share                          424 non-null    float64\n",
+      " 5   air_yards_share                       424 non-null    float64\n",
+      " 6   wopr                                  424 non-null    float64\n",
+      " 7   receptions_per_game                   424 non-null    float64\n",
+      " 8   targets_per_game                      424 non-null    float64\n",
+      " 9   receiving_yards_per_game              424 non-null    float64\n",
+      " 10  receiving_tds_per_game                424 non-null    float64\n",
+      " 11  receiving_fumbles_per_game            424 non-null    float64\n",
+      " 12  receiving_air_yards_per_game          424 non-null    float64\n",
+      " 13  receiving_yards_after_catch_per_game  424 non-null    float64\n",
+      " 14  receiving_first_downs_per_game        424 non-null    float64\n",
+      " 15  receiving_epa_per_game                424 non-null    float64\n",
+      "dtypes: float64(13), int64(3)\n",
+      "memory usage: 56.3 KB\n"
      ]
     }
    ],
@@ -435,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 124,
    "id": "780b85ce-0a3d-4500-9827-f4e60ea614a8",
    "metadata": {},
    "outputs": [
@@ -447,7 +451,7 @@
       "\n",
       "TE Best Parameters: {'reg': Lasso(max_iter=5000), 'reg__alpha': 0.1}\n",
       "\n",
-      "TE Best RMSE: 2.654\n",
+      "TE Best RMSE: 2.650\n",
       "\n",
       "TE Best Model: Pipeline(steps=[('scaler', StandardScaler()),\n",
       "                ('reg', Lasso(alpha=0.1, max_iter=5000))])\n"
@@ -461,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 125,
    "id": "71b2d271-62c3-407b-a465-f69799db9b87",
    "metadata": {},
    "outputs": [
@@ -471,7 +475,7 @@
        "['../data/processed/test_te.pkl']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
