--- a/notebooks/01_data_prep.ipynb
+++ b/notebooks/01_data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1121,
+   "execution_count": 1132,
    "id": "75d8627e-2c1f-405a-9636-058af1a74dfd",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1122,
+   "execution_count": 1133,
    "id": "a6fca5de-05e8-4548-84d8-36be29ac9bd5",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1123,
+   "execution_count": 1134,
    "id": "0783e8f1-dd95-4e76-9ecb-061a75b2cbc0",
    "metadata": {
     "scrolled": true
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1124,
+   "execution_count": 1135,
    "id": "8b0e6f20-4333-4564-a985-f19598da7a94",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1004,7 @@
        "4               79.60  "
       ]
      },
-     "execution_count": 1124,
+     "execution_count": 1135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,9 +1016,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1125,
+   "execution_count": 1136,
    "id": "16e48234-46f0-450e-a08f-2daa239c78d7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1153,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 1137,
    "id": "723d52c9-fc7e-4d6e-9392-a2cd4a643594",
    "metadata": {},
    "outputs": [],
@@ -1191,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
+   "execution_count": 1138,
    "id": "4d4f330f-92af-4074-be5a-235bc346b730",
    "metadata": {},
    "outputs": [
@@ -1265,7 +1267,7 @@
        "4    2017           2000                   17"
       ]
      },
-     "execution_count": 700,
+     "execution_count": 1138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1279,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 701,
+   "execution_count": 1139,
    "id": "ddb1b65c-2028-401f-92a8-706a9b84c58c",
    "metadata": {},
    "outputs": [
@@ -1526,7 +1528,7 @@
        "4054                   56    55.646718              402.58  "
       ]
      },
-     "execution_count": 701,
+     "execution_count": 1139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1546,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 702,
+   "execution_count": 1140,
    "id": "40844c37-eb8e-4448-8eb5-982577af0480",
    "metadata": {},
    "outputs": [
@@ -1820,7 +1822,7 @@
        "4                        18.49                                  17.58  "
       ]
      },
-     "execution_count": 702,
+     "execution_count": 1140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1855,7 +1857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 703,
+   "execution_count": 1141,
    "id": "f1c1776e-cb8f-424c-a3bc-db6be3213015",
    "metadata": {
     "scrolled": true
@@ -4386,7 +4388,7 @@
        "5553                                    NaN  "
       ]
      },
-     "execution_count": 703,
+     "execution_count": 1141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4406,7 +4408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 704,
+   "execution_count": 1142,
    "id": "522b988d-d46a-4eeb-bea5-8b839b63e322",
    "metadata": {
     "scrolled": true
@@ -4463,7 +4465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 705,
+   "execution_count": 1143,
    "id": "1d48f116-e285-4be1-a02e-5117ac871e61",
    "metadata": {},
    "outputs": [
@@ -4729,7 +4731,7 @@
        "2941               385.5  "
       ]
      },
-     "execution_count": 705,
+     "execution_count": 1143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4750,7 +4752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 706,
+   "execution_count": 1144,
    "id": "e1e09aac-be41-42b8-a344-299af4df83cc",
    "metadata": {},
    "outputs": [
@@ -5036,7 +5038,7 @@
        "107                         6.33                                   6.68  "
       ]
      },
-     "execution_count": 706,
+     "execution_count": 1144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5087,7 +5089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 707,
+   "execution_count": 1145,
    "id": "6151fcd0-a233-4a39-bcc5-d691ac41670d",
    "metadata": {
     "scrolled": true
@@ -14813,7 +14815,7 @@
        "5603                         4.21                                    NaN  "
       ]
      },
-     "execution_count": 707,
+     "execution_count": 1145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14833,7 +14835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 708,
+   "execution_count": 1146,
    "id": "bd091725-84dd-48ed-aa9a-c3b0ed8e2d16",
    "metadata": {
     "scrolled": true
@@ -14892,7 +14894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 709,
+   "execution_count": 1147,
    "id": "b38f929b-091a-4c1f-b220-a5103fe605ac",
    "metadata": {},
    "outputs": [
@@ -15145,7 +15147,7 @@
        "2781  0.974012      0.311475         0.428936  0.767469               376.4  "
       ]
      },
-     "execution_count": 709,
+     "execution_count": 1147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15166,7 +15168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 710,
+   "execution_count": 1148,
    "id": "435ee03d-a66a-4fe1-a14c-773313bddc42",
    "metadata": {},
    "outputs": [
@@ -15446,7 +15448,7 @@
        "44                         6.81                                    NaN  "
       ]
      },
-     "execution_count": 710,
+     "execution_count": 1148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15497,7 +15499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 711,
+   "execution_count": 1149,
    "id": "5203a4db-c63d-4b44-935d-a2d7f75cce52",
    "metadata": {
     "scrolled": true
@@ -29187,7 +29189,7 @@
        "5700                        13.28                                    NaN  "
       ]
      },
-     "execution_count": 711,
+     "execution_count": 1149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29207,7 +29209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 712,
+   "execution_count": 1150,
    "id": "e9363085-48a0-4bc5-942c-7ee5f670268a",
    "metadata": {
     "scrolled": true
@@ -29264,7 +29266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 713,
+   "execution_count": 1151,
    "id": "5da70b09-e835-4a00-a62b-ef60367b547c",
    "metadata": {},
    "outputs": [
@@ -29480,7 +29482,7 @@
        "1120  1.029204      0.263514         0.253534  0.572744              280.30  "
       ]
      },
-     "execution_count": 713,
+     "execution_count": 1151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29500,7 +29502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 714,
+   "execution_count": 1152,
    "id": "2ea70a04-07db-42dc-9e3f-7665b92b6224",
    "metadata": {},
    "outputs": [
@@ -29743,7 +29745,7 @@
        "39                                  10.15  "
       ]
      },
-     "execution_count": 714,
+     "execution_count": 1152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29778,7 +29780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 715,
+   "execution_count": 1153,
    "id": "bf04aa60-5feb-4fef-8d46-2974c3ecd21d",
    "metadata": {
     "scrolled": true
@@ -35641,7 +35643,7 @@
        "5709                                    NaN  "
       ]
      },
-     "execution_count": 715,
+     "execution_count": 1153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35661,7 +35663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 716,
+   "execution_count": 1154,
    "id": "de2dbf0e-9050-4b32-821c-2caea4958491",
    "metadata": {
     "scrolled": true
@@ -35713,7 +35715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 717,
+   "execution_count": 1155,
    "id": "c6a5536e-2dd1-4608-aba3-0ec9063cbfb8",
    "metadata": {},
    "outputs": [],
