--- a/notebooks/01_data_prep.ipynb
+++ b/notebooks/01_data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1132,
+   "execution_count": 1180,
    "id": "75d8627e-2c1f-405a-9636-058af1a74dfd",
    "metadata": {},
    "outputs": [],
@@ -16,20 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1133,
+   "execution_count": 1181,
    "id": "a6fca5de-05e8-4548-84d8-36be29ac9bd5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Ensuring all columns and rows are visible\n",
     "pd.set_option('display.max_columns', None)\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "pd.set_option('display.max_info_columns', 115)"
+    "pd.set_option('display.max_rows', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1134,
+   "execution_count": 1182,
    "id": "0783e8f1-dd95-4e76-9ecb-061a75b2cbc0",
    "metadata": {
     "scrolled": true
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1135,
+   "execution_count": 1183,
    "id": "8b0e6f20-4333-4564-a985-f19598da7a94",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1003,7 @@
        "4               79.60  "
       ]
      },
-     "execution_count": 1135,
+     "execution_count": 1183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1136,
+   "execution_count": 1184,
    "id": "16e48234-46f0-450e-a08f-2daa239c78d7",
    "metadata": {
     "scrolled": true
@@ -1155,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1137,
+   "execution_count": 1185,
    "id": "723d52c9-fc7e-4d6e-9392-a2cd4a643594",
    "metadata": {},
    "outputs": [],
@@ -1193,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1138,
+   "execution_count": 1186,
    "id": "4d4f330f-92af-4074-be5a-235bc346b730",
    "metadata": {},
    "outputs": [
@@ -1267,7 +1266,7 @@
        "4    2017           2000                   17"
       ]
      },
-     "execution_count": 1138,
+     "execution_count": 1186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1139,
+   "execution_count": 1187,
    "id": "ddb1b65c-2028-401f-92a8-706a9b84c58c",
    "metadata": {},
    "outputs": [
@@ -1528,7 +1527,7 @@
        "4054                   56    55.646718              402.58  "
       ]
      },
-     "execution_count": 1139,
+     "execution_count": 1187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1548,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1140,
+   "execution_count": 1188,
    "id": "40844c37-eb8e-4448-8eb5-982577af0480",
    "metadata": {},
    "outputs": [
@@ -1822,7 +1821,7 @@
        "4                        18.49                                  17.58  "
       ]
      },
-     "execution_count": 1140,
+     "execution_count": 1188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1857,7 +1856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1141,
+   "execution_count": 1189,
    "id": "f1c1776e-cb8f-424c-a3bc-db6be3213015",
    "metadata": {
     "scrolled": true
@@ -4388,7 +4387,7 @@
        "5553                                    NaN  "
       ]
      },
-     "execution_count": 1141,
+     "execution_count": 1189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4408,7 +4407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1142,
+   "execution_count": 1190,
    "id": "522b988d-d46a-4eeb-bea5-8b839b63e322",
    "metadata": {
     "scrolled": true
@@ -4465,7 +4464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1143,
+   "execution_count": 1191,
    "id": "1d48f116-e285-4be1-a02e-5117ac871e61",
    "metadata": {},
    "outputs": [
@@ -4731,7 +4730,7 @@
        "2941               385.5  "
       ]
      },
-     "execution_count": 1143,
+     "execution_count": 1191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4752,7 +4751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1144,
+   "execution_count": 1192,
    "id": "e1e09aac-be41-42b8-a344-299af4df83cc",
    "metadata": {},
    "outputs": [
@@ -5038,7 +5037,7 @@
        "107                         6.33                                   6.68  "
       ]
      },
-     "execution_count": 1144,
+     "execution_count": 1192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5089,7 +5088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1145,
+   "execution_count": 1193,
    "id": "6151fcd0-a233-4a39-bcc5-d691ac41670d",
    "metadata": {
     "scrolled": true
@@ -14815,7 +14814,7 @@
        "5603                         4.21                                    NaN  "
       ]
      },
-     "execution_count": 1145,
+     "execution_count": 1193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14835,7 +14834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1146,
+   "execution_count": 1194,
    "id": "bd091725-84dd-48ed-aa9a-c3b0ed8e2d16",
    "metadata": {
     "scrolled": true
@@ -14894,7 +14893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1147,
+   "execution_count": 1195,
    "id": "b38f929b-091a-4c1f-b220-a5103fe605ac",
    "metadata": {},
    "outputs": [
@@ -15147,7 +15146,7 @@
        "2781  0.974012      0.311475         0.428936  0.767469               376.4  "
       ]
      },
-     "execution_count": 1147,
+     "execution_count": 1195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15168,7 +15167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1148,
+   "execution_count": 1196,
    "id": "435ee03d-a66a-4fe1-a14c-773313bddc42",
    "metadata": {},
    "outputs": [
@@ -15448,7 +15447,7 @@
        "44                         6.81                                    NaN  "
       ]
      },
-     "execution_count": 1148,
+     "execution_count": 1196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15499,7 +15498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1149,
+   "execution_count": 1197,
    "id": "5203a4db-c63d-4b44-935d-a2d7f75cce52",
    "metadata": {
     "scrolled": true
@@ -29189,7 +29188,7 @@
        "5700                        13.28                                    NaN  "
       ]
      },
-     "execution_count": 1149,
+     "execution_count": 1197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29209,7 +29208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1150,
+   "execution_count": 1198,
    "id": "e9363085-48a0-4bc5-942c-7ee5f670268a",
    "metadata": {
     "scrolled": true
@@ -29266,7 +29265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1151,
+   "execution_count": 1199,
    "id": "5da70b09-e835-4a00-a62b-ef60367b547c",
    "metadata": {},
    "outputs": [
@@ -29482,7 +29481,7 @@
        "1120  1.029204      0.263514         0.253534  0.572744              280.30  "
       ]
      },
-     "execution_count": 1151,
+     "execution_count": 1199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29502,7 +29501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1152,
+   "execution_count": 1200,
    "id": "2ea70a04-07db-42dc-9e3f-7665b92b6224",
    "metadata": {},
    "outputs": [
@@ -29745,7 +29744,7 @@
        "39                                  10.15  "
       ]
      },
-     "execution_count": 1152,
+     "execution_count": 1200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29780,7 +29779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1153,
+   "execution_count": 1201,
    "id": "bf04aa60-5feb-4fef-8d46-2974c3ecd21d",
    "metadata": {
     "scrolled": true
@@ -35643,7 +35642,7 @@
        "5709                                    NaN  "
       ]
      },
-     "execution_count": 1153,
+     "execution_count": 1201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35663,7 +35662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1154,
+   "execution_count": 1202,
    "id": "de2dbf0e-9050-4b32-821c-2caea4958491",
    "metadata": {
     "scrolled": true
@@ -35715,7 +35714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1155,
+   "execution_count": 1203,
    "id": "c6a5536e-2dd1-4608-aba3-0ec9063cbfb8",
    "metadata": {},
    "outputs": [],
